--- a/app/pom.xml
+++ b/app/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>user</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.roman.mysan</groupId>
+            <artifactId>security</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
